8323068: Fix memory leaks in 3D metal code