modules/javafx.graphics/src/main/native-prism-mtl/MetalMeshView.h
@@ -92,6 +92,7 @@ typedef struct PS_PHONG_UNIFORMS {
 - (MetalMesh*) getMesh;
 - (int) getCullingMode;
 - (void) render;
+- (void) release;
 @end
 
 #endif
